# sift

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  corpus.contract.md  pyproject.toml  sift.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: eval-bench-ci.yml  release.yml  tests.yml
assets/: generate_logo.py
docs/design/: browser-fetch.md
evals/: __init__.py  cli.py  determinism.py  efficiency.py  facts_coverage.py  facts_validation.py  llm_judge.py  performance.py  sampler.py  structural.py
evals/agent_loop/: __init__.py  agent.py  judge.py  questions.py  report.py  runner.py  tools.py
sift/: __init__.py  _io.py  agent_surface.py  browser.py  classify.py  cli.py  commit.py  config.py  decide.py  extract.py  extract_code.py  extract_next_state.py  extract_strategy.py  facts.py  fetch.py  index_profile.py  integrity.py  manifest.py  mcp_server.py  normalize.py  paths.py  plan.py  prove.py  publish.py  purge.py  quality.py  registry.py  robots.py  status.py  timestamp.py  verify_proof.py
tests/: conftest.py  test_agent_loop.py  test_agent_surface.py  test_api_connector.py  test_backup.py  test_browser_contract.py  test_browser_real.py  test_changelog_continuity.py  test_classify.py  test_commit_chain.py  test_config.py  test_consolidate_md.py  test_content_admission.py  test_decide.py  test_eval_bench_b3.py  test_eval_bench_b5.py  test_eval_bench_drift.py  test_eval_bench_scoring.py  test_evals.py  test_excludes_and_pdf.py  test_extract_anchors.py  test_extract_code.py  test_extract_json.py  test_extract_next_state.py  test_extract_strategy.py  test_facts.py  test_facts_coverage.py  test_fetch_browser.py  test_firecrawl_scrape.py  test_frontier.py  test_gates.py  test_impersonate_rotation.py  test_integrity.py  test_manifest.py  test_markdown_passthrough.py  test_mcp_changed_since.py  test_mcp_index.py  test_mcp_multi_index.py  test_mcp_server.py  test_mcp_time_travel.py  (+18 more)
(+38 files in other folders)
