[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-engine"
version = "0.1.0"
description = "Sift — deterministic website indexing for grep-first LLM agents"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Deval Shah" }]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.27",
    "trafilatura>=1.12",
    "aiolimiter>=1.1",
    "click>=8.1",
    "lxml>=5.0",
    "selectolax>=0.3",
    "mcp>=1.0",
    "pypdf>=4.0",
    "jsonschema>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]
evals = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "jsonschema>=4",
]
# Optional browser-rendering stack for SPA fetch (see docs/design/browser-fetch.md).
# Install with: pip install 'sift[browser]' && python -m playwright install chromium
# History: v0.2.0 originally bundled crawl4ai; swapped to bare Playwright after
# reproducible hangs on analytics-heavy SPAs. See archive/crawl4ai/README.md.
browser = [
    "playwright>=1.40",
]
# Tier-2 escalation transport: TLS/HTTP2 fingerprint impersonation. Defeats most
# Cloudflare/Akamai/Imperva fingerprint blocks with no browser and no per-request
# cost. Install with: pip install 'sift-engine[impersonate]'
impersonate = [
    "curl_cffi>=0.7",
]

[project.urls]
Homepage = "https://github.com/dvlshah/sift"
Repository = "https://github.com/dvlshah/sift"
Issues = "https://github.com/dvlshah/sift/issues"

[project.scripts]
sift = "sift.cli:main"
sift-mcp = "sift.mcp_server:main"
sift-evals = "evals.cli:main"

[tool.setuptools.packages.find]
include = ["sift*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
